# diploma

./: .gitignore  .gitmodules  README.md  notes.notes  requirements.txt
Data/g01-0001/: first_calibration_data.csv  second_calibration_data.csv  second_calibration_data.yaml  second_grid_data.csv
Data/g01-0002/: error_data.csv  first_calibration_data.csv  first_run_data.csv  fov_data.csv  second_calibration_data.csv  second_calibration_data.yaml  second_grid_data.csv  second_grid_data.yaml  second_run_data.csv
Data/g01-0004/: error_data.csv  first_calibration_data.csv  first_run_data.csv  fov_data.csv  second_calibration_data.csv  second_calibration_data.yaml  second_grid_data.csv  second_grid_data.yaml  second_run_data.csv
Data/g01-0005/: error_data.csv  first_calibration_data.csv  first_run_data.csv  fov_data.csv  second_calibration_data.csv  second_calibration_data.yaml  second_grid_data.csv  second_grid_data.yaml  second_run_data.csv
Sources/: CalibrationPerformer.py  Database.py  FInal.ipynb  Plotting.py  PolynomCoefs.ipynb  UtilNotebook.ipynb  Vector.py  coefs.ipynb
Sources/Benchmarks/: .clang-format  CMakeLists.txt  Dockerfile
Sources/Benchmarks/Cmake/: toolchain.cmake
Sources/Benchmarks/Linker/: MemoryTemplate.ld
Sources/Benchmarks/Src/: BenchmarkBase.hpp  Benchmarks.hpp  Main.cpp  SensorPoint.hpp  Startup.cpp
Sources/Benchmarks/Src/GeometricTransform/: CMakeLists.txt  GeometricTransformBenchmark.cpp  results.csv
Sources/Benchmarks/Src/LinearTransform/: CMakeLists.txt  LinearTransformBenchmark.cpp  results.csv
Sources/Benchmarks/Src/PolynomialTransform/: CMakeLists.txt  PolynomialTransformBenchmark.cpp  results.csv
(+264 files in other folders)
